--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
+/* .custon-scrollbar {
+    @apply scrollbar-thumb-gray-700 scrollbar-track-gray-50 hover:scrollbar-thumb-gray-300  dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 dark:hover:scrollbar-thumb-gray-600;
+} */
+
+.custom-scrollbar {
+    @apply scrollbar scrollbar-thumb-gray-200 scrollbar-track-gray-50 dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 hover:scrollbar-thumb-gray-300 dark:hover:scrollbar-thumb-gray-600;
+}
+
+.custom-scrollbar-thin {
+    @apply scrollbar-thin scrollbar-thumb-gray-200 scrollbar-track-gray-50 dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 hover:scrollbar-thumb-gray-300 dark:hover:scrollbar-thumb-gray-600;
+}
+
+.custom-scrollbar-rounded {
+    @apply scrollbar-thumb-rounded-full scrollbar-track-rounded-full scrollbar scrollbar-thumb-gray-200 scrollbar-track-gray-50 dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 hover:scrollbar-thumb-gray-300 dark:hover:scrollbar-thumb-gray-600;
+}
+
+.custom-scrollbar-rounded-thin {
+    @apply scrollbar-thumb-rounded-full scrollbar-track-rounded-full scrollbar-thin scrollbar-thumb-gray-200 scrollbar-track-gray-50 dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 hover:scrollbar-thumb-gray-300 dark:hover:scrollbar-thumb-gray-600;
+}
+
 @tailwind utilities;
