--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,8 +1,65 @@
 @tailwind base;
 @tailwind components;
-/* .custon-scrollbar {
-    @apply scrollbar-thumb-gray-700 scrollbar-track-gray-50 hover:scrollbar-thumb-gray-300  dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 dark:hover:scrollbar-thumb-gray-600;
-} */
+
+.btn {
+    @apply text-sm py-2.5 px-5 font-medium text-center focus:ring-4 focus:outline-none;
+}
+
+.btn.btn-xs {
+    @apply text-xs py-2 px-3;
+}
+
+.btn.btn-sm {
+    @apply text-sm py-2 px-3;
+}
+
+.btn.btn-lg {
+    @apply text-base py-3 px-5;
+}
+
+.btn.btn-xl {
+    @apply text-base py-3.5 px-6;
+}
+
+.btn-primary {
+    @apply text-white bg-blue-700 hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 rounded-lg;
+}
+
+.btn-primary.btn-outline {
+    @apply text-blue-700 hover:text-white bg-transparent border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-600 dark:focus:ring-blue-800;
+}
+
+.btn-secondary {
+    @apply text-gray-900 bg-white border hover:bg-gray-100 border-gray-300 dark:text-white dark:border-gray-600 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 rounded-lg;
+}
+
+.btn-secondary.btn-outline {
+    @apply text-blue-900 hover:text-white bg-transparent border border-gray-800 hover:bg-gray-900 focus:ring-4 focus:outline-none focus:ring-gray-300 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-800;
+}
+
+.btn-red {
+    @apply text-white bg-red-700 hover:bg-red-800 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800 rounded-lg;
+}
+
+.btn-red.btn-outline {
+    @apply text-red-700 hover:text-white bg-transparent border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-800;
+}
+
+.btn-green {
+    @apply text-white bg-green-700 hover:bg-green-800 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800 rounded-lg;
+}
+
+.btn-green.btn-outline {
+    @apply text-green-700 hover:text-white bg-transparent border border-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 dark:border-green-500 dark:text-green-500 dark:hover:text-white dark:hover:bg-green-600 dark:focus:ring-green-800;
+}
+
+.btn-yellow {
+    @apply text-white bg-yellow-400 hover:bg-yellow-500 dark:focus:ring-yellow-900 rounded-lg;
+}
+
+.btn-yellow.btn-outline {
+    @apply text-yellow-400 hover:text-white bg-transparent border border-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:outline-none focus:ring-yellow-300 dark:border-yellow-300 dark:text-yellow-300 dark:hover:text-white dark:hover:bg-yellow-400 dark:focus:ring-yellow-900;
+}
 
 .custom-scrollbar {
     @apply scrollbar scrollbar-thumb-gray-200 scrollbar-track-gray-50 dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 hover:scrollbar-thumb-gray-300 dark:hover:scrollbar-thumb-gray-600;
