add table custom style

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 
+/* Buttons */
 .btn {
     @apply text-sm py-2.5 px-5 font-medium text-center focus:ring-4 focus:outline-none;
 }
@@ -61,6 +62,16 @@
     @apply text-yellow-400 hover:text-white bg-transparent border border-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:outline-none focus:ring-yellow-300 dark:border-yellow-300 dark:text-yellow-300 dark:hover:text-white dark:hover:bg-yellow-400 dark:focus:ring-yellow-900;
 }
 
+/* Links */
+.text-link-primary {
+    @apply text-blue-600 dark:text-blue-500 hover:underline;
+}
+
+.text-link-red {
+    @apply text-red-600 dark:text-red-500 hover:underline;
+}
+
+/* Scrollbar */
 .custom-scrollbar {
     @apply scrollbar scrollbar-thumb-gray-200 scrollbar-track-gray-50 dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 hover:scrollbar-thumb-gray-300 dark:hover:scrollbar-thumb-gray-600;
 }
@@ -75,6 +86,60 @@
 
 .custom-scrollbar-rounded-thin {
     @apply scrollbar-thumb-rounded-full scrollbar-track-rounded-full scrollbar-thin scrollbar-thumb-gray-200 scrollbar-track-gray-50 dark:scrollbar-thumb-gray-700 dark:scrollbar-track-gray-900 hover:scrollbar-thumb-gray-300 dark:hover:scrollbar-thumb-gray-600;
+}
+
+/* Alerts */
+.alert {
+    @apply p-4 mb-4 text-sm rounded-lg ;
+}
+
+.alert.alert-info {
+    @apply text-blue-700 bg-blue-100 dark:bg-blue-200 dark:text-blue-800;
+}
+
+.alert.alert-danger {
+    @apply text-red-700 bg-red-100 dark:bg-red-200 dark:text-red-800;
+}
+
+.alert.alert-success {
+    @apply text-green-700 bg-green-100 dark:bg-green-200 dark:text-green-800;
+}
+
+.alert.alert-warning {
+    @apply text-yellow-700 bg-yellow-100 dark:bg-yellow-200 dark:text-yellow-800;
+}
+
+.alert.alert-dark {
+    @apply text-gray-700 bg-gray-100 dark:bg-gray-700 dark:text-gray-300;
+}
+
+/* Tables */
+.table-wrapper {
+    @apply overflow-x-auto relative shadow-sm sm:rounded-md;
+}
+
+.table-wrapper table {
+    @apply w-full text-sm text-left text-gray-500 dark:text-gray-400;
+}
+
+.table-wrapper thead {
+    @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
+}
+
+.table-wrapper thead th {
+    @apply py-3 px-6;
+}
+
+.table-wrapper tbody tr {
+    @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600;
+}
+
+.table-wrapper tbody th {
+    @apply py-4 px-6;
+}
+
+.table-wrapper tbody td {
+    @apply py-4 px-6;
 }
 
 @tailwind utilities;
